sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/Collection_Week__c.object-meta.xml
<CustomObject>
    <label>Collection Week</label>
    <nameField>
        <label>Collection Week Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Weeks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>