sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/fields/Collection_Week__c.field-meta.xml
<CustomField>
    <fullName>Collection_Week__c</fullName>
    <formula>&quot;Week of &quot; + TEXT( DATEVALUE(CreatedDate)-8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Week</label>
    <type>Text</type>
</CustomField>