sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <label>Execution Date</label>
    <type>Date</type>
</CustomField>