sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <formula>Toilet__r.Operator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator</label>
    <type>Text</type>
</CustomField>