sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Collection Weeks</relationshipLabel>
    <relationshipName>Collection_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>