sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/fields/Waste_kg__c.field-meta.xml
<CustomField>
    <fullName>Waste_kg__c</fullName>
    <label>Waste (kg)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>