sfSandBoxCode/force-app/main/default/objects/Collection_Week__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Execution_Date__c</columns>
    <columns>Collection_Week__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>